# azure_tts

./: CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: hacs.yml  hassfest.yml
custom_components/azure_dragon_tts/: __init__.py  api.py  config_flow.py  const.py  manifest.json  tts.py
custom_components/azure_dragon_tts/translations/: de.json  en.json
custom_components/azure_speech_tts/: __init__.py  api.py  config_flow.py  const.py  manifest.json  tts.py
custom_components/azure_speech_tts/translations/: de.json  en.json
