[project]
name = "azure-dragon-tts"
version = "0.1.1"
description = "Home Assistant custom integration for Azure Speech text-to-speech voices."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = []
keywords = ["home-assistant", "tts", "azure", "speech", "custom-integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = []

[project.urls]
Documentation = "https://learn.microsoft.com/azure/ai-services/speech-service/text-to-speech"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

